fix todo-1 r1
